Revision history for Pod-Weaver

{{$NEXT}}

4.006     2014-01-07 20:12:37-05:00 America/New_York
        - update tests to pass octets to ->read_string, as is proper

4.005     2013-12-21 15:01:46-0500 America/New_York
        - updated tests for the new (fixed, consistent) string behavior in
          Mixin::Linewise

4.004     2013-11-05 21:50:13 America/New_York
        - allow multi-line formats for VERSION plugin (thanks, Alex Peters)
        - ...including the %T-prefix for lines only included in
          trial releases
        - look for PODNAME more consistently (thanks, Chris Weyl)
        - put license filename in F<> formatting (thanks, Alex Peters)

4.003     2013-11-02 22:58:43 America/New_York
        - note that [@Default] contains [-SingleEncoding] (thanks, Caleb
          Cushing)

4.002     2013-11-02 11:37:04 America/New_York
        [ THIS MIGHT BREAK YOUR CODE ]
        - stable release of previous v4 changes

4.001     2013-10-20 10:50:50 America/New_York (TRIAL RELEASE)
        [ THIS MIGHT BREAK YOUR CODE ]
        - SingleEncoding now accepts found =encodings as long as they match,
          unless the plugin's encoding attribute was set explicitly

4.000     2013-10-19 17:20:59 America/New_York (TRIAL RELEASE)
        [ THIS MIGHT BREAK YOUR CODE ]
        - the SingleEncoding plugin to force one consistent =encoding
        - ...is now enabled, for UTF-8, in the default configuration

3.101640  2013-09-17 08:57:41 Asia/Tokyo
        - fix repository links! argh, oops

3.101639  2013-09-17 08:56:05 Asia/Tokyo
        - documentation fix: mention that =func exists in the default
          configuration (thanks, Joshua Keroes!)
        - removed use of deprecated Class::MOP::load_class (thanks, Karen
          Etheridge)

3.101638  2012-08-03 20:42:44 America/New_York
        - add more helpful information to the "no document name" error (thanks,
          Leto Labs, LLC!)

3.101637  2012-06-07 22:18:55 America/New_York